--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -1,3 +1,14 @@
+// Grid System
+$grid-columns: 12;
+$grid-max-width: 1200px; //breakpoint-small
+$breakpoint-xs: "only screen and (min-width: 0px)";
+$breakpoint-small: "only screen and (min-width: 451px)";
+$breakpoint-medium: "only screen and (min-width: 768px)";
+$breakpoint-large: "only screen and (min-width: 1008px)";
+$breakpoint-xl: "only screen and (min-width: 1300px)";
+$textFont: 'Roboto Condensed', sans-serif;
+$headerFont: 'Roboto', sans-serif;
+
 $darkpurple: #0C002B;
 $grey: #FAF7F5;
 $offwhite: #FFFEFF;
