--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,14 +1,23 @@
-@import url( 'https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700');
+@import url( 'https://fonts.googleapis.com/css?family=Roboto+Condensed|Roboto:100,300,400,500');
 @import "reset";
-@import "variables";
+@import "Header";
+@import "Topimg";
 
 
-*,
- body,
- html {
-  font-family: 'Roboto', sans-serif;
-  box-sizing: border-box;
-  // background: purple;
+
+@font-face {
+  font-family: road_rage;
+  src: url('/fonts/Road_Rage.otf');
 }
-@import "listings";
-@import "content-area";
+
+
+
+body {
+  font-family: 'Roboto', sans-serif;
+
+//  background: #3636c1;
+
+  width: 100%;
+  height: 100vh;
+  overflow-x: hidden;
+}
