--- a/assets/sass/_Topimg.scss
+++ b/assets/sass/_Topimg.scss
@@ -1,13 +1,15 @@
-.Topimg {
+#Topimg {
   position: relative;
   background: black;
-  height: 500px;
+
+  min-height: 500px;
+  height: 100vh;
   background: #b51212;
   background: linear-gradient(135deg,rgba(0,0,0,.2) 0,#002d77 100%);
   background-image: linear-gradient(135deg,rgba(0,0,0,.2) 0,#000 100%),url("http://www.seriouseats.com/recipes/assets_c/2015/05/Anova-Steak-Guide-Sous-Vide-Photos15-beauty-thumb-1500xauto-423558.jpg");
   background-position: center;
   background-size: cover;
-  padding-right: 200px;
+  //padding-right: 200px;
 
   .title{
     padding: 200px 0 80px;
