--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -15,3 +15,15 @@ $offwhite: #FFFEFF;
 $pink: #FF6F91;
 $darkgrey: #ADA8AA;
 $lightgrey: #D1CBCD;
+
+$titleColor: #AAAAAA;
+
+$paragraphColor: #ADADAD;
+
+$footerbackround: #131A22;
+
+$black: #202020;
+
+$red: #911A20;
+
+$green: #4D6010;
