--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,9 +1,12 @@
 @import url( 'https://fonts.googleapis.com/css?family=Roboto+Condensed|Roboto:100,300,400,500');
 @import "reset";
+@import "variables";
+@import "grid";
 @import "Header";
 @import "Topimg";
-
-
+@import "OurStory";
+@import "SpecialMenu";
+@import "global";
 
 @font-face {
   font-family: road_rage;
