--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -6,6 +6,9 @@
 @import "Topimg";
 @import "OurStory";
 @import "SpecialMenu";
+@import "RandomQuote";
+@import "Reviews";
+@import "ContactUs";
 @import "global";
 
 @font-face {
