--- a/assets/sass/_SpecialMenu.scss
+++ b/assets/sass/_SpecialMenu.scss
@@ -1,6 +1,6 @@
 #SpecialMenu {
   padding: 100px 0;
-  background: $offwhite;
+  background: Azure;
 //  background: linear-gradient(135deg,rgba(0,0,0,.2) 0,#002d77 100%);
 //  background-image: url("https://img00.deviantart.net/fb0f/i/2011/197/8/8/gray_texture_by_gbyaln-d3xigul.jpg");
 
