--- a/assets/sass/_RandomQuote.scss
+++ b/assets/sass/_RandomQuote.scss
@@ -3,11 +3,7 @@
 
 
 
-    background: #b51212;
-    background: linear-gradient(135deg,rgba(0,0,0,.2) 0,#002d77 100%);
-  
-    background-position: right;
-    background-size: cover;
+
 
 
 h1{
@@ -25,5 +21,22 @@ span{
   display: block;
   text-transform: capitalize;
   text-align: center;
+}
+
+.Background {
+
+}
+
+.Parallax{
+
+  background: black;
+
+  min-height: 10000px;
+
+  background: #b51212;
+  background: linear-gradient(135deg,rgba(0,0,0,.2) 0,#002d77 100%);
+  background-image: linear-gradient(135deg,rgba(0,0,0,.2) 0,#000 100%),url("");
+  background-position: center;
+  background-size: cover;
 }
 }
