--- a/assets/sass/_Footer.scss
+++ b/assets/sass/_Footer.scss
@@ -15,7 +15,7 @@ footer {
     }
   }
   .social-media{
-    margin: 0;
+    margin: 0 0 50px;
     padding: 0;
     li{
       display: inline-block;
